# raavan

./: .dockerignore  .env.example  .gitignore  404.html  ARCHITECTURE.md  CLAUDE.md  Makefile  OPERATIONS.md  PHASE2.md  PRODUCTION_READINESS.md  README.md  deploy.py  docker-compose.microservices.yml  docker-compose.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  test-results.xml
.github/: AGENTS.md  CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
ARCHITECTURE_DIAGRAMS/: index.html
DISTRIBUTED_ARCHITECTURE/: index.html
DISTRIBUTED_IMPLEMENTATION_PLAN/: index.html
DISTRIBUTED_RUNTIME/: index.html
FUTURE_UI/: index.html
OPERATIONS/: index.html
builder/: Dockerfile  next.config.ts  package.json  pnpm-lock.yaml  temp_landing.tsx
design_patterns/: index.html
docker/: backend.Dockerfile  code-interpreter.Dockerfile  docker-compose.microservices.yml  docker-compose.yml
docs/: ARCHITECTURE_DIAGRAMS.md  DISTRIBUTED_RUNTIME.md  FUTURE_UI.md  OPERATIONS.md  architecture_interactive.html  design_patterns.md  execution_pipeline.md  index.md
examples/: 01_react_agent.ipynb  02_memory.ipynb  03_hitl.ipynb  04_mcp_tools.ipynb  05_mcp_sse.ipynb  06_combined_tools.ipynb  07_web_surfer.ipynb  08_guardrails.ipynb  09_memory_system.ipynb  10_mcp_native.ipynb  11_evals.ipynb  12_observability.ipynb  13_docker_services.ipynb  14_kind_backend_mock_frontend.ipynb  15_runtime.ipynb  16_grpc_runtime.ipynb  17_runtime_internals.ipynb  18_multi_tenant_sessions.ipynb  19_invoice_extractor.ipynb  20_restate_runtime.ipynb  combined_tools_example.py  eval_example.py  human_in_the_loop_example.py  mcp_sse_example.py  mcp_tools_example.py  memory_demo.py  react_agent_demo.py  tempo_tracing_demo.py  test_guardrails.py  test_mcp_native.py  test_memory_system.py  web_surfer_demo.py
execution_pipeline/: index.html
javascripts/: mathjax.js
k8s/: README.md  backend-deployment.yaml  code-interpreter-statefulset.yaml  configmap.yaml  frontend-deployment.yaml  hpa.yaml  pgvector-init-configmap.yaml  postgres-service.yaml  postgres-statefulset.yaml  rbac.yaml
microservices/: index.html
notebooks/: spotify_api_test.ipynb
public/: 0000083797.tif
search/: search_index.json
tests/: conftest.py  test_adapter_scanner.py  test_agent_service.py  test_memory.py  (+22 more)
(+732 files in other folders)
